Expand RedundantTryCatchRemovingTransformer to cover cases of handler blocks with types provably never thrown in the workspace